# pynng

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  README.md  build_pynng.py  pyproject.toml
.github/: install-llvm-windows.sh
.github/workflows/: check-nng.yml  check-python.yml  cibuildwheel.yml  pre-commit-autoupdate.yml  publish.yml  smoketest.yml  update-hkcache.yml
.headerkit/ir/: index.json
.headerkit/ir/libclang.umbrella.aarch64-darwin.d.NNG_DECL_NNG_DEPRECATED_NNG_STATIC_LIB.i.include/: ir.json  metadata.json
.headerkit/output/cffi/: index.json
.headerkit/output/cffi/libclang.umbrella.aarch64-darwin.d.NNG_DECL_NNG_DEPRECATED_NNG_STATIC_LIB.i.include/: metadata.json  output.py
.hkcache/ir/: index.json
.hkcache/ir/libclang.umbrella.d.NNG_DECL_NNG_DEPRECATED_NNG_STATIC_LIB.i.include/: ir.json  metadata.json
.hkcache/ir/libclang.umbrella.d.NNG_DECL_NNG_DEPRECATED_NNG_STATIC_LIB.i.include-2/: ir.json  metadata.json
.hkcache/output/cffi/: index.json
.hkcache/output/cffi/libclang.umbrella.d.NNG_DECL_NNG_DEPRECATED_NNG_STATIC_LIB.i.include/: metadata.json
.hkcache/output/cffi/libclang.umbrella.d.NNG_DECL_NNG_DEPRECATED_NNG_STATIC_LIB.i.include-2/: metadata.json  output.py
cmake/: idempotent_patch.cmake
docs/: architecture.rst  async.rst  changelog.rst  conf.py  contributing.rst  core.rst  developing.rst  exceptions.rst  getting-started.rst  index.rst  installation.rst  migration.rst  protocols.rst  requirements.txt  tls.rst  transports.rst
docs/api/: exceptions.rst  messaging.rst  networking.rst  options.rst  sockaddr.rst  sockets.rst  tls.rst
docs/snippets/: async_for_asyncio_example.py  async_for_example.py  async_with_example.py
examples/: README.md
pynng/: __init__.py  _aio.py  _base.py  exceptions.py  nng.py  options.py  service.py  tls.py
pynng/v2/: __init__.py  _callbacks.py  nng.py
stubs/include/: _fake_typedefs.h
test/: _test_util.py  conftest.py  test_abstract.py  test_aio.py  test_api.py  test_async_ergonomics.py  test_async_integration.py  test_build.py  test_context_options.py  test_exceptions.py  test_msg.py  test_options.py  test_pipe.py  test_pipe_events.py  test_protocols.py  test_pubsub_management.py  test_safety_fixes.py  test_service.py  test_survey_ergonomics.py  test_tls.py
